--- a/css/style.css
+++ b/css/style.css
@@ -19,23 +19,15 @@ textarea {
     padding: 1em;
     border-radius: 10px;
     float: left;
-    width: 40%;
+    width: 100%;
     height: 23em;
     resize: none;
 }
 
 textarea:focus { outline: 0; }
 
-#input {
-    position: absolute;
-    display: block;
-    margin-top: 25em;
-    float: left;
-}
-
 button {
-    /*position: absolute;*/
-    margin-top: 25em;
+    margin-top: 2em;
     background: mediumblue;
     border-radius: 10px;
     border: 0;
@@ -48,18 +40,52 @@ button:hover { background: royalblue; }
 button:active { background: skyblue; }
 button:focus { outline: 0; }
 
+#buttons {
+    margin-left: 1em;
+    text-align: center;
+}
+
+#input {
+    position: absolute;
+    display: block;
+    margin-top: 25em;
+}
+
 #output {
     padding: 1em;
     margin-left: 1em;
     border: 1px solid black;
     border-radius: 10px;
     background-color: whitesmoke;
-    float: left;
-    width: 40%;
     height: 17em;
+    display: block;
     font-family: "Lucida Console", monospace;
     overflow: auto;
     white-space: nowrap;
 }
 
-#bdiv { padding: 1em; }
+#bdiv {
+    padding: 1em;
+    clear: both;
+    float: left;
+    width: 100%;
+}
+
+/* columns */
+#col1 {
+    width: 40%;
+    float: left;
+    position: relative;
+}
+
+#col2 {
+    width: 40%;
+    float: left;
+    position: relative;
+}
+
+#col3 {
+    width: 10%;
+    float: left;
+    position: relative;
+}
