Remove the 3rd column as suggested by @Maltysen
http://codegolf.stackexchange.com/questions/52502/write-a-program-that-finds-the-most-occurring-paired-letter-in-a-string/52517#comment125300_52517

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ textarea:focus { outline: 0; }
 
 button {
     margin-top: 2em;
+    margin-bottom: 2em;
     background: mediumblue;
     border-radius: 10px;
     border: 0;
@@ -42,7 +43,7 @@ button:focus { outline: 0; }
 /* remove ugly outline in Firefox */
 button::-moz-focus-inner { border: none; }
 
-#buttons {
+#controls {
     text-align: center;
 }
 
@@ -81,8 +82,3 @@ button::-moz-focus-inner { border: none; }
     position: relative;
 }
 
-#col3 {
-    width: 10%;
-    float: left;
-    position: relative;
-}
